--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "author": "Amith Prasanth",
   "license": "ISC",
+  "engines": {
+    "node": "14.16.0"
+  },
   "dependencies": {
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
