--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "jquery-datetimepicker": "^2.5.21",
+    "jquery-timepicker": "^1.3.3",
     "mongoose": "^5.12.0",
     "mongoose-findorcreate": "^3.0.0",
     "passport": "^0.4.1",
